<resources>
    <string name="app_name">jubao</string>
    <string name="action_settings">Settings</string>
    <string name="phone_name">13678699652</string>
    <string name="liulanrenshu">0</string>
    <string name="guanzhurenshu">0</string>
    <string name="xiaoxi">消息</string>
    <string name="fenxiang">分享</string>
    <string name="youhuijuan">优惠券</string>
    <string name="dongtai">动态</string>

    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>



    <string name="hello_world">Hello world!</string>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <!--公共-->
    <string name="baocun">保存</string>


    张瑞钊 2015/12/17 11:06:22
    <!--编辑店铺-->
    <string name="dianpu_name">店铺名称：</string>
    <string name="dianpu_touxiang">店铺头像：</string>
    <string name="dianpu_fengmian">店铺封面：</string>
    <string name="lianxi_QQ">联系QQ：</string>
    <string name="lianxi_phone">联系电话：</string>
    <string name="dianpu_dizhi">店铺地址：</string>
    <string name="button_baocun">保存</string>
    <string name="bianjidianpu">编辑店铺</string>

    <!--编辑地址-->
    <string name="bianjidizhi">编辑地址</string>
    <string name="xingming">姓名：</string>
    <string name="dizhi">地址：</string>
    <string name="morenfahuo">默认发货地址：</string>
    <string name="morentuihuo">默认退货地址：</string>
    <string name="youbian">邮编：</string>
    <string name="dianhua">电话：</string>
    <string name="xiangxidizhi_kuohao">详细地址（具体到门牌号）</string>

    <!--结算账户-->
    <string name="jiesuanzhanghu">结算账户：</string>
    <string name="chikaren">持卡人：</string>
    <string name="qingshuruchifarenxingming">请输入持卡人姓名：</string>
    <string name="yinhangkaihuming">银行开户名</string>
    <string name="qingshurukaihuming">请输入开户名</string>
    <string name="yinhangsuozaidi">银行所在地</string>
    <string name="yinhangmingcheng">银行名称</string>
    <string name="qingshuruyinhangminghceng">请输入银行名称</string>
    <string name="yhkh">银行卡号</string>
    <string name="qsryhkh">请输入银行卡号</string>
    <!--钱包-->
    <string name="zhanghumingxi">账户明细</string>
    <string name="jszh">结算账户</string>
    <string name="djs">待结算（元）</string>
    <string name="ling">0.00</string>
    <string name="kjs">可结算（元）</string>
    <string name="wyjs">我要结算</string>

    <string name="denglu">登陆</string>
    <string name="zhuce">注册</string>
    <string name="dingdan">订单</string>
    <string name="shouhou">售后</string>
    <string name="quanbu">全部</string>
    <string name="daifukuan">代付款</string>
    <string name="daifahuo">代发货</string>
    <string name="yifahuo">已发货</string>
    <string name="yiwancheng">已完成</string>
    <string name="yishenqing">已申请</string>
    <string name="yituihuo">已退货</string>
    <string name="tongyi">同意退款</string>
    <string name="jujue">拒绝退款</string>

    <string name="fenlei">分类</string>
    <string name="paixu">排序</string>
    <string name="tianjia">添加</string>
    <string name="wancheng">完成</string>


    <!--登陆-->
    <string name="login_zhanghao">账号：</string>
    <string name="login_password">密码：</string>
    <string name="shoujihao">手机号</string>
    <string name="mima">密码</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="qing_phone">请输入手机号</string>
    <string name="qing_yanzhengma">请输入验证码</string>
    <string name="huoqu">获取验证码</string>
    <string name="title_activity_shang_pin_fragment">ShangPinFragment</string>

    <!--商品-->
    <string name="qsrspmc">请输入商品名称</string>
    <string name="chushouzhong">出售中</string>
    <string name="cangkuzhong">仓库中</string>
    <string name="wentishangpin">问题商品</string>
    <string name="title_activity_add_shang_pin">AddShangPinActivity</string>

    <!--添加商品-->
    <string name="addShangpin">添加商品</string>
    <string name="shangpinLeimu">商品类目</string>
    <string name="weixuanze">未选择</string>
    <string name="dianpufenlei">店铺分类</string>
    <string name="weifenlei">未分类（选填）</string>
    <string name="shangpinname">商品名称</string>
    <string name="quming">取个响亮的商品名称吧</string>
    <string name="shangpinImg">商品图片:</string>
    <string name="tu_number"> (  /3 )</string>
    <string name="shangpinjiage">商品价格</string>
    <string name="dingjia">给商品定个好价格</string>
    <string name="shangpinkucun">商品库存</string>
    <string name="kucun_number">设置合理库存避免超卖</string>
    <string name="shangpinbianma">商品编码</string>
    <string name="xuantian">（选填）</string>

    <string name="shangpinguige">商品规格</string>
    <string name="sahngpinleixing">商品类型</string>

    <string name="tianjia_">添加商品规格</string>
    <string name="yanse_guige">（如颜色尺码等）</string>

    <string name="shezhiyunfei">设置运费</string>
    <string name="shangpinleixing">商品类型</string>
</resources>
