<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height">
        <ImageView
            android:onClick="fanhui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fanhui"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/fanhui_padding_left"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/biaoti"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="结算账户"
            android:textColor="@color/red"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/xian"
        android:background="@color/xian"/>
    <RelativeLayout
        android:background="@drawable/shape_border"
        android:layout_marginTop="@dimen/K_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_nei_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_bianji"
            android:layout_marginLeft="@dimen/fanhui_padding_left"
            android:layout_centerVertical="true"
            android:text="@string/chikaren"/>
        <EditText
            android:layout_alignParentRight="true"
            android:hint="@string/qingshuruchifarenxingming"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@null"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/shape_border"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_nei_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_bianji"
            android:layout_marginLeft="@dimen/fanhui_padding_left"
            android:layout_centerVertical="true"
            android:text="@string/yinhangkaihuming"/>
        <EditText
            android:layout_alignParentRight="true"
            android:hint="@string/qingshurukaihuming"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@null"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/shape_border"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_nei_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_bianji"
            android:layout_marginLeft="@dimen/fanhui_padding_left"
            android:layout_centerVertical="true"
            android:text="@string/yinhangsuozaidi"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/fanhui_padding_right"
            android:src="@drawable/icon_arrow_red"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/shape_border"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_nei_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_bianji"
            android:layout_marginLeft="@dimen/fanhui_padding_left"
            android:layout_centerVertical="true"
            android:text="@string/yinhangmingcheng"/>
        <EditText
            android:layout_alignParentRight="true"
            android:hint="@string/qingshuruyinhangminghceng"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@null"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/shape_border"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_nei_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_bianji"
            android:layout_marginLeft="@dimen/fanhui_padding_left"
            android:layout_centerVertical="true"
            android:text="@string/yhkh"/>
        <EditText
            android:layout_alignParentRight="true"
            android:hint="@string/qsryhkh"
            android:layout_width="@dimen/_nei_edit_width"
            android:layout_height="match_parent"
            android:background="@null"/>
    </RelativeLayout>
    <Button
        android:layout_marginTop="@dimen/editetext_height"
        android:text="确定"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_bianji"
        android:layout_width="match_parent"
        android:layout_height="@dimen/K_height"
        android:layout_marginLeft="@dimen/paddingleft"
        android:layout_marginRight="@dimen/paddingright"
        android:background="@drawable/button"/>
    <ImageView
        android:layout_marginTop="@dimen/_top_head"
        android:src="@drawable/zhongyaotishi_03"
        android:layout_width="match_parent"
        android:layout_height="@dimen/jilv" />
</LinearLayout>
