<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_height">
        <RadioGroup
            android:layout_marginTop="@dimen/dingdan_top_bottom"
            android:layout_marginBottom="@dimen/dingdan_top_bottom"
            android:gravity="right"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:textColor="@color/white"
                android:button="@null"
                android:gravity="center"
                android:checked="true"
                android:id="@+id/dingdan_rb"
                android:background="@drawable/dingdan_button1"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:text="@string/dingdan"
                android:textSize="18sp"/>
            <RadioButton
                android:textSize="18sp"
                android:textColor="@color/red"
                android:button="@null"
                android:gravity="center"
                android:id="@+id/shouhou_rb"
                android:background="@drawable/dingdan_button2"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:text="@string/shouhou"/>
        </RadioGroup>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right">
            <ImageView
                android:id="@+id/sousuo"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fangdajing"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/xian"/>
    <LinearLayout
        android:visibility="visible"
        android:id="@+id/dingdan_dingdan"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <RadioGroup
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp">
            <RadioButton
                android:textColor="@color/red"
                android:checked="true"
                android:button="@null"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/dingdan_all_rb"
                android:background="@drawable/dingdan_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quanbu" />
            <RadioButton
                android:textColor="@color/dingdan_ziti_color"
                android:button="@null"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/dingdan_daifukuan_rb"
                android:background="@drawable/dingdan_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daifukuan"/>
            <RadioButton
                android:textColor="@color/dingdan_ziti_color"
                android:button="@null"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/dingdan_daifahuo_rb"
                android:background="@drawable/dingdan_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daifahuo" />
            <RadioButton
                android:textColor="@color/dingdan_ziti_color"
                android:button="@null"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/dingdan_yifahuo_rb"
                android:background="@drawable/dingdan_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yifahuo"/>
            <RadioButton
                android:textColor="@color/dingdan_ziti_color"
                android:button="@null"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/dingdan_yiwancheng_rb"
                android:background="@drawable/dingdan_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yiwancheng" />
        </RadioGroup>
        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>


    <LinearLayout
        android:visibility="gone"
        android:id="@+id/shouhou"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <RadioGroup
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp">

            <RadioButton
                android:textColor="@color/dingdan_ziti_color"
                android:checked="true"
                android:button="@null"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/shouhou_yishenqing_rb"
                android:background="@drawable/dingdan_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yishenqing"/>
            <RadioButton
                android:textColor="@color/dingdan_ziti_color"
                android:button="@null"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/shouhou_yituihuo_rb"
                android:background="@drawable/dingdan_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yituihuo" />
            <RadioButton
                android:textColor="@color/dingdan_ziti_color"
                android:button="@null"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/shouhou_tongyi_rb"
                android:background="@drawable/dingdan_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tongyi"/>
            <RadioButton
                android:textColor="@color/dingdan_ziti_color"
                android:button="@null"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/shouhou_jujue_rb"
                android:background="@drawable/dingdan_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jujue" />
        </RadioGroup>
        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>


</LinearLayout>