<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fanhui"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/fanhui_padding_left"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/biaoti"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/bianjidianpu"
            android:textColor="@color/red"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_baocun"
            android:layout_marginRight="@dimen/fanhui_padding_right"
            android:textColor="@color/red"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:background="@color/xian"
        android:layout_height="@dimen/xian" />
    <RelativeLayout
        android:layout_marginTop="@dimen/_top_head"
        android:background="@drawable/shape_border_xiao"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_nei_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_bianji"
            android:layout_marginLeft="@dimen/fanhui_padding_left"
            android:layout_centerVertical="true"
            android:text="@string/dianpu_name"/>
        <EditText
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/_nei_edit_width"
            android:layout_height="match_parent"
            android:background="@null"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/shape_border_xiao"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_dianpu_touxiang_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_bianji"
            android:layout_marginLeft="@dimen/fanhui_padding_left"
            android:layout_centerVertical="true"
            android:text="@string/dianpu_touxiang"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/fanhui_padding_right"
            android:src="@drawable/shop_logo_default"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/shape_border_xiao"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_dianpu_touxiang_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_bianji"
            android:layout_marginLeft="@dimen/fanhui_padding_left"
            android:layout_centerVertical="true"
            android:text="@string/dianpu_fengmian"/>
        <ImageView
            android:layout_width="@dimen/_dianpu_touxiang_height"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/fanhui_padding_right"
            android:src="@drawable/shop_cover_default"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/shape_border_xiao"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_nei_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_bianji"
            android:layout_marginLeft="@dimen/fanhui_padding_left"
            android:layout_centerVertical="true"
            android:text="@string/lianxi_phone"/>
        <EditText
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/_nei_edit_width"
            android:layout_height="match_parent"
            android:background="@null"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/shape_border_xiao"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_nei_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_bianji"
            android:layout_marginLeft="@dimen/fanhui_padding_left"
            android:layout_centerVertical="true"
            android:text="@string/lianxi_QQ"/>
        <EditText
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/_nei_edit_width"
            android:layout_height="match_parent"
            android:background="@null"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@drawable/shape_border_xiao"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_nei_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_bianji"
            android:layout_marginLeft="@dimen/fanhui_padding_left"
            android:layout_centerVertical="true"
            android:text="@string/dianpu_dizhi"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/fanhui_padding_right"
            android:src="@drawable/icon_arrow_red"/>
    </RelativeLayout>
    <Button
        android:layout_marginTop="@dimen/K_top"
        android:text="@string/button_baocun"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_bianji"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ding_Right"
        android:layout_marginLeft="@dimen/paddingleft"
        android:layout_marginRight="@dimen/paddingright"
        android:background="@drawable/button"/>
</LinearLayout>
